2001-06-04  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: fix mem leak

	* doc/sgml/C/xacc-about.sgml: update credits

	* AUTHORS: update credits

	* lib/srfi/srfi-19.scm: fix bug.

2001-06-04  Rob Browning  <rlb@cs.utexas.edu>

	* lib/srfi/srfi-19.scm: updated to include guile-core bug fixes.
	Removed syncase dependency.
	(priv:open-input-string): removed -- check for open-input-string
	and define that if not found.
	(:optional): removed - just as easy to handle by-hand -- all funcs
	that called :optional have been adjusted.
	(priv:read-tai-utc-data): remove priv: from open-input-string.
	(string->date): remove priv: from open-input-string.
	(date): change constructor name to make-date.
	(priv:decode-julian-day-number): add inexact->exact after
	truncate.
	(time-utc->date): add inexact->exact and int-secs.
	(priv:locale-reader): use reverse! on result rather than reverse.

	* src/scm/Makefile.am (gnc_regular_scm_files): remove process.scm.
	(gncscmmoddir): new directory for gnucash guile modules --
	i.e. for files available via (use-modules (gnucash foo)).
	(gncscmmod_DATA): first gnucash guile module (gnucash process).

	* src/scm/price-quotes.scm: use (gnucash process) module.

	* src/scm/process.scm: now a guile module (gnucash process).
	(gnc:cleanup-sub-process): fix several missing waitpid pid args.

2001-06-04  James LewisMoss  <jimdres@mindspring.com>

	* src/test/test-xml-commodity.c (node_and_commodity_equal): use
	string_to_gint64 rather than string_to_integer.

	* src/engine/sixtp-utils.c: (string_to_gint64) return FALSE if the
	content is NULL. 

	* src/engine/gnc-commodity-xml-v2.c (set_commodity_value): use
	string_to_gint64 rather than string_to_integer.

	* src/engine/io-gncxml-v2.c (gnc_counter_end_handler): use
	string_to_gint64 rather than string_to_integer.

	* src/engine/sixtp-dom-parsers.c (string_to_integer): remove
	func.  duplicates string_to_gint64

2001-06-04  Dave Peticolas  <dave@krondo.com>
