@@ -1,5 +1,7 @@
 2001-06-04  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/new-user.glade: tweak gui. fix strings.
+
 	* src/gnome/window-main.c: fix mem leak
 
 	* doc/sgml/C/xacc-about.sgml: update credits
